--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   color: #333;
 }
 header {
-  background: #4caf50;
+  background: #c20000;
   color: white;
   padding: 1rem;
   border-radius: 8px;
